--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
-  "name": "page1",
+  "name": "codesangam",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "The code sangam project",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Kalp Mehta",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.6",
+    "chart.js": "^4.4.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
-    "express-sessions": "^1.0.1",
-    "hbs": "^4.2.0",
+    "lodash": "^4.17.21",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1"
   }
